@@ -25,3 +25,123 @@ sub new {
 1;
 
 __END__
+
+=pod
+
+=encoding utf8
+
+=head1 NAME
+
+Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF - Test instance for Wikidata snak.
+
+=head1 SYNOPSIS
+
+ use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF;
+
+ my $obj = Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF->new;
+ my $datatype = $obj->datatype;
+ my $datavalue = $obj->datavalue;
+ my $property = $obj->property;
+ my $snaktype = $obj->snaktype;
+
+=head1 METHODS
+
+=head2 C<new>
+
+ my $obj = Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF->new;
+
+Constructor.
+
+Returns instance of object.
+
+=head2 C<datatype>
+
+ my $datatype = $obj->datatype;
+
+Get data type.
+
+Returns string.
+
+=head2 C<datavalue>
+
+ my $datavalue = $obj->datavalue;
+
+Get data value.
+
+Returns instance of Wikibase::Datatype::Value.
+
+=head2 C<property>
+
+ my $property = $obj->property;
+
+Get property name.
+
+Returns string.
+
+=head2 C<snaktype>
+
+ my $snaktype = $obj->snaktype;
+
+Get snak type.
+
+Returns string.
+
+=head1 EXAMPLE
+
+=for comment filename=fixture_create_and_print_snak_wd_stated_in_viaf.pl
+
+ use strict;
+ use warnings;
+
+ use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF;
+ use Wikibase::Datatype::Print::Snak;
+
+ # Object.
+ my $obj = Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF->new;
+
+ # Print out.
+ print scalar Wikibase::Datatype::Print::Snak::print($obj);
+
+ # Output:
+ # P248: Q53919
+
+=head1 DEPENDENCIES
+
+L<Test::Shared::Fixture::Wikibase::Datatype::Value::Item::Wikidata::VIAF>,
+L<Wikibase::Datatype::Snak>.
+
+=head1 SEE ALSO
+
+=over
+
+=item L<Wikibase::Datatype>
+
+Wikibase datatypes.
+
+=item L<Wikibase::Datatype::Snak>
+
+Wikibase snak datatype.
+
+=back
+
+=head1 REPOSITORY
+
+L<https://github.com/michal-josef-spacek/Wikibase-Datatype>
+
+=head1 AUTHOR
+
+Michal Josef Špaček L<mailto:skim@cpan.org>
+
+L<http://skim.cz>
+
+=head1 LICENSE AND COPYRIGHT
+
+© Michal Josef Špaček 2020-2023
+
+BSD 2-Clause License
+
+=head1 VERSION
+
+0.29
+
+=cut
