@@ -1,6 +1,8 @@
 0.29
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::ReferenceURL::Fixture1.
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::StatedIn::VIAF.
  - Add Wikibase::Datatype::Languages to Wikibase::Datatype doc.
  - Fix datetime check.
  - Fix MANIFEST file for sense value.
